# Niffler

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
rules/content/: cloud.toml  connection_strings.toml  credentials.toml  crypto.toml  linux.toml  network.toml  tokens.toml  wireguard.toml
rules/dir/: discard.toml  flag.toml
rules/file/: black.toml  discard.toml  green.toml  red.toml  yellow.toml
rules/share/: discard.toml  flag.toml
src/: classifier.rs  config.rs  discovery.rs  lib.rs  main.rs  nfs.rs  output.rs  pipeline.rs  scanner.rs  walker.rs  web.rs
src/classifier/: action.rs  defaults.rs  engine.rs  matcher.rs  rule.rs  triage.rs
src/config/: cli.rs  settings.rs
src/discovery/: exports.rs  misconfig.rs  orchestrator.rs  rpcbind.rs  scanner.rs  targets.rs  uid_harvest.rs  v4_pseudo.rs
src/nfs/: auth.rs  connector.rs  errors.rs  ops.rs  socks.rs  transport.rs  types.rs  v3.rs  v4.rs
src/nfs/v4/: connector.rs  ffi.rs  ops.rs
src/output/: console.rs  export.rs  json.rs  sqlite.rs  tsv.rs  types.rs
src/pipeline/: backoff.rs  channels.rs  connections.rs  error.rs  health.rs  orchestrator.rs  progress.rs  stats.rs
src/scanner/: cache.rs  content.rs  context.rs  error.rs  file.rs  keys.rs  orchestrator.rs  pool.rs
src/walker/: error.rs  local.rs  orchestrator.rs  parallel.rs  remote.rs
src/web/: assets.rs  db.rs  handlers.rs  server.rs  templates.rs
src/web/db/: annotations.rs  query.rs  schema.rs  write.rs
static/css/: niffler.css
templates/: base.html  dashboard.html  findings.html  hosts.html  scans.html
templates/partials/: finding_detail.html  findings_rows.html  host_exports.html  review_button.html  star_button.html
tests/: cli_help.rs  cli_smoke_test.rs  discovery_test.rs  pipeline_test.rs  rules_test.rs
tests/fixtures/sample_files/: cert.pem  config.yaml  private_key.pem  test.env
tests/fixtures/sample_rules/: cycle_rules.toml  invalid_relay.toml  relay_chain.toml  valid_rules.toml
tests/integration/: helpers.rs
