[package]
name = "niffler"
version = "0.3.0"
edition = "2024"
description = "NFS share secret finder"
license = "MIT"
rust-version = "1.88"

[[bin]]
name = "niffler"
path = "src/main.rs"

[features]
default = []
testing = ["dep:mockall"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }        
nfs3_client = { version = "0.8", features = ["tokio"] }
tokio-stream = "0.1"                                        
ipnet = "2"                                                  
toml = "1"                                                   
serde = { version = "1", features = ["derive"] }
serde_json = "1"                                             
regex = "1"                   
aho-corasick = "1"            
globset = "0.4"               
x509-parser = "0.18"             
ssh-key = "0.6"                  
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"                                              
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
colored = "3"            
indicatif = "0.18"       
chrono = { version = "0.4", features = ["serde"] }
csv = "1"                                                    
thiserror = "2"       
anyhow = "1"          
walkdir = "2"         
bytesize = "2"        
dashmap = "6"
libc = "0.2"
tokio-socks = "0.5"
axum = "0.8"
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
rusqlite = { version = "0.37", features = ["bundled-full"] }
tokio-rusqlite = { version = "0.7", features = ["bundled-full"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }
rust-embed = "8"
mockall = { version = "0.14", optional = true }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
niffler = { path = ".", features = ["testing"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true                                                
